--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,32 @@
 [tox]
-envlist = py26, py27, py33, py34, docs
+# Removed for now:
+# py33, py34, pypy
+envlist = py27, style, docs
 indexserver =
     default = https://pypi.yelpcorp.com/simple/
 
 [testenv]
+basepython = python2.7
 deps = -rrequirements-dev.txt
 commands =
-    coverage erase
-    coverage run -m pytest --strict {posargs:tests}
-    coverage report -m --show-missing --fail-under 100
+    py.test --cov=yelp_avro
     pre-commit run --all-files
 
 [testenv:pre-commit]
 deps = pre-commit>=0.4.2
 commands = pre-commit {posargs}
+
+[testenv:style]
+deps = {[testenv]deps}
+commands =
+    flake8 .
+
+[testenv:lint]
+deps = {[testenv]deps}
+    pylint
+commands =
+    pylint --rcfile=.pylintrc schematizer
+    pylint --rcfile=.pylintrc tests
 
 [testenv:docs]
 deps =
@@ -26,14 +39,20 @@ commands = sphinx-build -b html -d build/doctrees ./ build/html
 envdir = virtualenv_run
 commands =
 
+[testenv:devenv-command]
+deps = {[testenv]deps}
+commands = {posargs}
+
 [flake8]
-ignore =
-exclude = .git,.tox,docs,virtualenv_run
+exclude = .svn,CVS,.bzr,.hg,.git,.tox,docs,virtualenv_run,__pycache__,docs/conf.py
 filename = *.py,*.wsgi
-max-line-length = 131
 
 [pep8]
+# E265 deals with spacing inside of comments - breaks human formatting
+# E309 puts a blank line after class declarations - doesn't work well with docstrings
+# E501 reformats lines to fit in --max-line-length poorly
 ignore = E265,E309,E501
 
 [pytest]
 norecursedirs = .* _darcs CVS docs virtualenv_run
+addopts = --ignore=setup.py --doctest-glob=*.rst -vv
