--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,17 +4,27 @@
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
     -   id: autopep8-wrapper
+        args:
+        - -i
+        - --ignore=E265,E309,E501
     -   id: check-yaml
     -   id: debug-statements
-    -   id: name-tests-test
+        language_version: python2.7
     -   id: flake8
+        language_version: python2.7
+    -   id: check-yaml
+    -   id: check-json
+    -   id: check-merge-conflict
+    -   id: name-tests-test
+        exclude: tests/helpers/(.+).py
 -   repo: git@git.yelpcorp.com:yelp_pre_commit_hooks
-    sha: 5b47e536433d7a00aaf19a6c403b7ecb6e961634
+    sha: cff7fc91c367ea75e2a38e34a4aafb025cf02781
     hooks:
     -   id: stop-dollar-html
     -   id: httplib-https-connection
     -   id: use-except-as
     -   id: check_mock_methods
+        language_version: python2.7
     -   id: byte_order_mark
     -   id: fix-encoding-pragma
     -   id: check-added-large-files
@@ -22,7 +32,9 @@
     sha: 3d86483455ab5bd06cc1069fdd5ac57be5463f10
     hooks:
     -   id: reorder-python-imports
-        args: [
-            '--add-import', 'from __future__ import absolute_import',
-            '--add-import', 'from __future__ import unicode_literals',
-        ]
+        language_version: python2.7
+        args:
+        - --add-import
+        - from __future__ import absolute_import
+        - --add-import
+        - from __future__ import unicode_literals
