Formatting changes and adding max-line-length to tox

--- a/tox.ini
+++ b/tox.ini
@@ -46,6 +46,7 @@ commands = {posargs}
 [flake8]
 exclude = .svn,CVS,.bzr,.hg,.git,.tox,docs,virtualenv_run,__pycache__,docs/conf.py
 filename = *.py,*.wsgi
+max-line-length = 80
 
 [pep8]
 # E265 deals with spacing inside of comments - breaks human formatting
