--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
 # The -e . syntax means to install the package in this directory as well.
--e .
+-e git://github.com/Yelp/avro.git@5f7b97fcbb79cabf4ed7a7ec5ba8314d06e8a7e5#egg=avro&subdirectory=lang/py
