--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ indexserver =
 basepython = python2.7
 deps = -rrequirements-dev.txt
 commands =
-    py.test --cov=yelp_avro
+    py.test --cov=data_pipeline_avro_util
     pre-commit run --all-files
 
 [testenv:pre-commit]
