revised to use list assignment slice; updated documentation

--- a/tox.ini
+++ b/tox.ini
@@ -32,8 +32,9 @@ commands =
 deps =
     {[testenv]deps}
     sphinx
-changedir = docs
-commands = sphinx-build -b html -d build/doctrees ./ build/html
+commands =
+    sphinx-apidoc -f -e -o docs/code data_pipeline_avro_util
+    sphinx-build -b html -d docs/build/doctrees docs/ docs/build/html
 
 [testenv:devenv]
 envdir = virtualenv_run
